[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Enemies/Sandy/Boss.png" type="Texture" id=1]
[ext_resource path="res://Enemies/SandyBoss.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=10]
radius = 9.0

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "boss",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 7.07107

[node name="SandyBoss" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 2.25322, 2.0931 )
shape = SubResource( 10 )

[node name="appearance" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "boss"
frame = 2
playing = true

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, 2 )
scale = Vector2( 2.30514, 2.30514 )
shape = SubResource( 11 )

[node name="immobolise_timer" type="Timer" parent="."]
one_shot = true

[node name="slow_timer" type="Timer" parent="."]
one_shot = true

[node name="move_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="summon_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="immobolise_timer" to="." method="_on_immobolise_timer_timeout"]
[connection signal="timeout" from="slow_timer" to="." method="_on_slow_timer_timeout"]
[connection signal="timeout" from="move_timer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="summon_timer" to="." method="_on_summon_timer_timeout"]
